Change Log - 2.1.1.10 (04/02/2017)
- Full screen option for cemu
- Current title version displayed
- Implemented DeleteTitleButton()
- Implemented Store Encrypted Content
- Implemented a ticket generator (1 less remote call)
- Backend code improvements
- Disable Dynamic Theme function
- Various UI Changes

Change Log - 2.1.1.8 (03/27/2017)
- Fixed an installer error

Change Log - 2.1.1.2 (03/26/2017)
- Added dynamic context menu items 
- Implemented LaunchCemuButton()
- Implemented AddUpdateButton()
- Implemented RemoveUpdateButton()
- Implemented AddDLCButton()
- Implemented RemoveDLCButton()